grammar.js
    source_file: $ => seq(
      optional($.shebang),
      repeat(choice($._statement, ';'))
    ),

    _statement: $ => choice(
      $.package_declaration,
      $.import_declaration,
      $.class_declaration,
      $.interface_declaration,
      $.trait_declaration,
      $.enum_declaration,
      $.record_declaration,
      $.variable_declaration,
      $.method_declaration,
      $.constructor_declaration,
      $.if_statement,
      $.while_statement,
      $.do_while_statement,
      $.for_statement,
      $.for_in_statement,
      $.switch_statement,
      $.try_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.throw_statement,
      $.assert_statement,
      $.labeled_statement,
      $.expression_statement,
      $.block
    ),

    package_declaration: $ => seq(
      repeat($.annotation),
      'package',
      field('name', $.qualified_identifier)
    ),

    import_declaration: $ => seq(
      'import',
      optional('static'),
      field('name', $.import_name),
      optional(seq('as', field('alias', $.identifier)))
    ),

    import_name: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
      optional(seq('.', alias('*', $.wildcard_import)))
    ),

    qualified_identifier: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier))
    ),

    block: $ => prec(1, seq(
      '{',
      repeat(choice($._statement, ';')),
      '}'
    )),

    expression_statement: $ => seq(
      repeat($.annotation),
      $._expression
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $._statement),
      optional(seq('else', field('alternative', $._statement)))
    )),

    while_statement: $ => seq(
      'while',
      field('condition', $.parenthesized_expression),
      field('body', $._statement)
    ),

    for_in_statement: $ => seq(
      'for',
      '(',
      optional(field('type', choice('def', 'var', $._type))),
      field('variable', $.identifier),
      choice('in', ':'),
      field('collection', $._expression),
      ')',
      field('body', $._statement)
    ),

    try_statement: $ => seq(
      'try',
      optional(field('resources', $.resource_specification)),
      field('body', $.block),
      repeat($.catch_clause),
      optional($.finally_clause)
    ),

    catch_clause: $ => seq(
      'catch',
      '(',
      field('parameter', $.catch_parameter),
      ')',
      field('body', $.block)
    ),

    catch_parameter: $ => seq(
      field('type', sep1($._type, '|')),
      field('name', $.identifier)
    ),

    finally_clause: $ => seq(
      'finally',
      field('body', $.block)
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional($._expression)
    )),

    class_declaration: $ => seq(
      repeat($.annotation),
      repeat($.modifier),
      'class',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional($.superclass),
      optional($.interfaces),
      field('body', $.class_body)
    ),

    enum_declaration: $ => seq(
      repeat($.annotation),
      repeat($.modifier),
      'enum',
      field('name', $.identifier),
      optional($.interfaces),
      field('body', $.enum_body)
    ),

    enum_body: $ => seq(
      '{',
      optional(sep1($.enum_constant, ',')),
      optional(','),
      optional(seq(';', repeat(choice($._class_member, ';')))),
      '}'
    ),

    enum_constant: $ => seq(
      repeat($.annotation),
      field('name', $.identifier),
      optional($.argument_list)
    ),

    superclass: $ => prec(PREC.CLOSURE_CALL + 1, seq('extends', field('type', $._type))),

    interfaces: $ => prec(PREC.CLOSURE_CALL + 1, seq('implements', sep1(field('type', $._type), ','))),

    class_body: $ => seq(
      '{',
      repeat(choice($._class_member, ';')),
      '}'
    ),

    _class_member: $ => choice(
      $.variable_declaration,
      $.method_declaration,
      $.constructor_declaration,
      $.class_declaration,
      $.interface_declaration,
      $.trait_declaration,
      $.enum_declaration,
      $.record_declaration,
      $.static_initializer,
      $.block
    ),

    variable_declaration: $ => prec.right(seq(
      repeat($.annotation),
      choice(
        seq(repeat($.modifier), choice('def', 'var'), sep1($.variable_declarator, ',')),
        seq(repeat1($.modifier), optional(field('type', $._type)), sep1($.variable_declarator, ',')),
        seq(field('type', choice($.primitive_type, $.generic_type, $.array_type, $.identifier)), sep1($.initialized_variable_declarator, ','))
      )
    )),

    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression)))
    ),

    method_declaration: $ => prec.right(seq(
      repeat($.annotation),
      choice(
        seq(repeat($.modifier), optional(field('type_parameters', $.type_parameters)), 'def', field('name', choice($.identifier, $.string_literal))),
        seq(repeat($.modifier), optional(field('type_parameters', $.type_parameters)), field('return_type', $.primitive_type), field('name', choice($.identifier, $.string_literal))),
        seq(repeat1($.modifier), optional(field('type_parameters', $.type_parameters)), optional(field('return_type', $._type)), field('name', choice($.identifier, $.string_literal)))
      ),
      field('parameters', $.formal_parameters),
      optional($.throws_clause),
      field('body', choice($.block, ';'))
    )),

    formal_parameters: $ => seq(
      '(',
      optional(sep1($.formal_parameter, ',')),
      ')'
    ),

    formal_parameter: $ => seq(
      repeat($.annotation),
      repeat($.modifier),
      optional(field('type', choice('def', $._type))),
      optional(alias(token.immediate('...'), $.varargs)),
      field('name', $.identifier),
      optional(seq('=', field('default_value', $._expression)))
    ),

    modifier: _ => choice(
      'public',
      'protected',
      'private',
      'static',
      'abstract',
      'final',
      'native',
      'synchronized',
      'transient',
      'volatile',
      'strictfp',
      'default'
    ),

    annotation: $ => prec.right(seq(
      '@',
      field('name', $.qualified_identifier),
      optional(field('arguments', $.annotation_argument_list))
    )),

    annotation_argument_list: $ => seq(
      '(',
      optional(sep1(choice($.annotation_value_pair, $.named_argument, $._expression), ',')),
      ')'
    ),

    _type: $ => choice(
      $.primitive_type,
      $.array_type,
      $.generic_type,
      $.scoped_type_identifier,
      $.identifier
    ),

    primitive_type: _ => choice(
      'boolean',
      'byte',
      'char',
      'short',
      'int',
      'long',
      'float',
      'double',
      'void'
    ),

    _expression: $ => choice(
      $.assignment_expression,
      $.binary_expression,
      $.unary_expression,
      $.ternary_expression,
      $.elvis_expression,
      $.type_cast_expression,
      $.instanceof_expression,
      $.closure_call_expression,
      $.command_expression,
      $.method_call,
      $.field_access,
      $.safe_field_access,
      $.spread_field_access,
      $.direct_field_access,
      $.method_pointer,
      $.method_reference,
      $.subscript_expression,
      $.range_expression,
      $._primary_expression
    ),

    _primary_expression: $ => choice(
      $.identifier,
      $.literal,
      $.closure,
      $.list_literal,
      $.map_literal,
      $.parenthesized_expression,
      $.object_creation_expression
    ),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')'
    ),

    // Closures
    closure: $ => seq(
      '{',
      optional(seq(
        field('parameters', $.closure_parameters),
        '->'
      )),
      repeat(choice($._statement, ';')),
      '}'
    ),

    closure_parameters: $ => sep1($.closure_parameter, ','),

    closure_parameter: $ => seq(
      optional(field('type', choice('def', $._type))),
      field('name', $.identifier),
      optional(seq('=', field('default_value', $._expression)))
    ),

    // Method Calls & DSL Invocations
    method_call: $ => prec.right(PREC.CALL, seq(
      field('function', choice($.identifier, $.field_access, $.safe_field_access, $.spread_field_access, $._primary_expression)),
      field('arguments', $.argument_list),
      optional(field('closure', $.closure))
    )),

    closure_call_expression: $ => prec(PREC.CLOSURE_CALL, seq(
      field('function', choice($.identifier, $.field_access, $.safe_field_access)),
      field('closure', $.closure)
    )),

    // Command expression (parenthesis-less method calls, e.g. Gradle 'id "java"', Jenkins 'sh "make"')
    command_expression: $ => prec.left(PREC.COMMAND, seq(
      field('function', choice($.identifier, $.field_access, $.safe_field_access)),
      field('arguments', $.command_argument_list),
      repeat(seq(
        field('chained_function', $.identifier),
        field('arguments', $.command_argument_list)
      )),
      optional(field('closure', $.closure))
    )),

    _command_argument: $ => choice(
      $.named_argument,
      $.literal,
      $.identifier,
      $.field_access,
      $.safe_field_access,
      $.method_call,
      $.closure,
      $.list_literal,
      $.map_literal
    ),

    command_argument_list: $ => prec.left(PREC.COMMAND, seq(
      $._command_argument,
      repeat(seq(',', choice($._command_argument, $._expression)))
    )),

    argument_list: $ => seq(
      '(',
      optional(sep1(choice($.named_argument, $._expression), ',')),
      ')'
    ),

    named_argument: $ => prec(1, seq(
      field('name', choice($.identifier, $.string_literal)),
      ':',
      field('value', $._expression)
    )),

    // Navigation and Member Access
    _access_object: $ => choice(
      $._primary_expression,
      $.method_call,
      $.closure_call_expression,
      $.subscript_expression,
      $.field_access,
      $.safe_field_access,
      $.spread_field_access
    ),

    field_access: $ => prec.left(PREC.NAVIGATION, seq(
      field('object', choice($.identifier, $._access_object)),
      '.',
      field('field', choice($.identifier, $.string_literal))
    )),

    safe_field_access: $ => prec.left(PREC.NAVIGATION, seq(
      field('object', $._access_object),
      '?.',
      field('field', choice($.identifier, $.string_literal))
    )),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field("left", choice(
        $.field_access,
        $.safe_field_access,
        $.subscript_expression,
        $.multiple_assignment_target,
        prec(-1, $.identifier)
      )),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '**=', '<<=', '>>=', '>>>=', '&=', '^=', '|=', '?=')),
      field('right', $._expression)
    )),

    elvis_expression: $ => prec.right(PREC.ELVIS, seq(
      field('left', $._expression),
      '?:',
      field('right', $._expression)
    )),

    binary_expression: $ => {
      const table = [
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['|', PREC.BITWISE_OR],
        ['^', PREC.BITWISE_XOR],
        ['&', PREC.BITWISE_AND],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['<=>', PREC.EQUALITY],
        ['===', PREC.EQUALITY],
        ['!==', PREC.EQUALITY],
        ['=~', PREC.EQUALITY],
        ['==~', PREC.EQUALITY],
        ['<', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['in', PREC.RELATIONAL],
        ['!in', PREC.RELATIONAL],
        ['as', PREC.RELATIONAL],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['>>>', PREC.SHIFT],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULT],
        ['/', PREC.MULT],
        ['%', PREC.MULT],
        ['**', PREC.POWER],
      ];

      return choice(...table.map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ));
    },

    range_expression: $ => prec.left(PREC.RANGE, seq(
      field('start', $._expression),
      field('operator', choice('..', '..<', '<..', '<..<')),
      field('end', $._expression)
    )),

    unary_expression: $ => choice(
      prec(PREC.UNARY, seq(
        field('operator', choice('+', '-', '++', '--', '!', '~')),
        field('operand', $._expression)
      )),
      prec.left(PREC.POSTFIX, seq(
        field('operand', $._expression),
        field('operator', choice('++', '--'))
      ))
    ),

    list_literal: $ => seq(
      '[',
      optional(sep1($._expression, ',')),
      optional(','),
      ']'
    ),

    map_literal: $ => seq(
      '[',
      choice(
        ':', // empty map [:]
        seq(sep1(choice($.map_entry, $.named_argument), ','), optional(','))
      ),
      ']'
    ),

    literal: $ => choice(
      $.number_literal,
      $.string_literal,
      $.boolean_literal,
      $.null_literal,
      $.regex_literal
    ),

    number_literal: _ => token(choice(
      // Hex
      /0[xX][0-9a-fA-F](_?[0-9a-fA-F])*[lLgG]?/,
      // Binary
      /0[bB][01](_?[01])*[lLgG]?/,
      // Octal
      /0[0-7]+[lLgG]?/,
      // Decimal / Float
      /[0-9](_?[0-9])*\.[0-9](_?[0-9])*([eE][+-]?[0-9](_?[0-9])*)?[fFdDmM]?/,
      /[0-9](_?[0-9])*[eE][+-]?[0-9](_?[0-9])*[fFdDmM]?/,
      /[0-9](_?[0-9])*[lLgGfFdDmM]?/
    )),

    string_literal: $ => choice(
      $.single_quote_string,
      $.triple_single_quote_string,
      $.double_quote_string,
      $.triple_double_quote_string,
      $.dollar_slashy_string
    ),

    single_quote_string: _ => token(seq(
      "'",
      repeat(choice(/[^'\\\n]+/, seq('\\', /./))),
      "'"
    )),

    triple_single_quote_string: _ => token(seq(
      "'''",
      repeat(choice(/[^'\\]+/, /'[^']/, /''[^']/, seq('\\', /./))),
      "'''"
    )),

    double_quote_string: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.interpolation
      )),
      '"'
    ),

    triple_double_quote_string: $ => seq(
      '"""',
      repeat(choice(
        $.triple_string_content,
        $.escape_sequence,
        $.interpolation
      )),
      '"""'
    ),

    dollar_slashy_string: $ => seq(
      '$/',
      repeat(choice(
        $.dollar_slashy_content,
        $.interpolation
      )),
      '/$'
    ),

    string_content: _ => token.immediate(prec(1, /[^"\\$]+/)),

    triple_string_content: _ => token.immediate(prec(1, /([^"\\$]|"[^"]|""[^"])+/)),

    dollar_slashy_content: _ => token.immediate(prec(1, /([^/\$]|\/[^\$]|\$\$|\/\/)+/)),

    interpolation: $ => choice(
      seq('$', field('variable', alias($.identifier, $.variable_ref))),
      seq('${', field('expression', $._expression), '}')
    ),

    identifier: _ => /[a-zA-Z_$][a-zA-Z0-9_$]*/,
  }
});

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}
